[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "flake8",
    "black",
]

[project]
name = "steam-cards-profit"
version = "1.0"
description = ""
authors = [
    {name = "LeLuCh B0й", email = "9300326+alekxeyuk@users.noreply.github.com"},
]
dependencies = ["requests", "colorama", "termcolor", "bs4", "lxml"]
requires-python = ">=3.11"
license = {text = "GNU-GPL"}
